[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.13.0.2",
    "httpx>=0.28.1",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "langchain>=1.0.3",
    "langgraph>=1.0.2",
    "mcp[cli]>=1.19.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
]
